Add machine translation

--- a/l10n/po/ja_JP/_guides/datasource.adoc.po
+++ b/l10n/po/ja_JP/_guides/datasource.adoc.po
@@ -311,8 +311,9 @@ msgstr "MySQL: `mysql`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:137
+#, fuzzy
 msgid "Oracle: `oracle`"
-msgstr ""
+msgstr "オラクル。 `oracle`"
 
 #. type: Plain text
 #: upstream/_guides/datasource.adoc:138
@@ -645,9 +646,9 @@ msgstr "`com.mysql.cj.jdbc.MysqlXADataSource`"
 
 #. type: Table
 #: upstream/_guides/datasource.adoc:272
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "`oracle`"
-msgstr ""
+msgstr "`oracle`"
 
 #. type: Table
 #: upstream/_guides/datasource.adoc:273
