--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -925,19 +925,21 @@ msgstr "を作成し、最後にテストコードを書きます。上記の Wi
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-client.adoc:437
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Token endpoint configuration"
-msgstr ""
+msgstr "トークンエンドポイントの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:440
+#, fuzzy
 msgid "By default the token endpoint address is discovered by adding a `/.well-known/openid-configuration` path to the configured `quarkus.oidc-client.auth-server-url`."
-msgstr ""
+msgstr "デフォルトでは、設定された `quarkus.oidc-client.auth-server-url` に `/.well-known/openid-configuration` のパスを追加することで、トークンのエンドポイントアドレスが検出されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:442
+#, fuzzy
 msgid "Alternatively, if the discovery endpoint is not available or you would like to save on the discovery endpoint roundtrip, you can disable the discovery and configure the token endpoint address with a relative path value, for example:"
-msgstr ""
+msgstr "また、ディスカバリーエンドポイントが利用できない場合や、ディスカバリーエンドポイントのラウンドトリップを節約したい場合は、ディスカバリーを無効にして、トークンエンドポイントのアドレスを相対パスの値で設定することができます（例）。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-client.adoc:449
