--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -1207,24 +1207,27 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:547
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Provider Endpoint configuration"
-msgstr ""
+msgstr "プロバイダーエンドポイントの設定"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:550
+#, fuzzy
 msgid "OIDC `web-app` application needs to know OpenId Connect provider's authorization, token, `JsonWebKey` (JWK) set and possibly `UserInfo`, introspection and end session (RP-initiated logout) endpoint addresses."
-msgstr ""
+msgstr "OIDC `web-app` アプリケーションは、OpenId Connect プロバイダのオーソリゼーション、トークン、 `JsonWebKey` (JWK) セット、そして場合によっては `UserInfo` 、イントロスペクション、エンドセッション (RP-initiated logout) のエンドポイントアドレスを知る必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:552
+#, fuzzy
 msgid "By default they are discovered by adding a `/.well-known/openid-configuration` path to the configured `quarkus.oidc.auth-server-url`."
-msgstr ""
+msgstr "デフォルトでは、設定された `quarkus.oidc.auth-server-url` に `/.well-known/openid-configuration` パスを追加することで検出されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:554
+#, fuzzy
 msgid "Alternatively, if the discovery endpoint is not available or you would like to save on the discovery endpoint roundtrip, you can disable the discovery and configure them with relative path values, for example:"
-msgstr ""
+msgstr "また、ディスカバリーエンドポイントが利用できない場合や、ディスカバリーエンドポイントのラウンドトリップを節約したい場合は、ディスカバリーを無効にして、相対パスの値で設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:571
@@ -1248,14 +1251,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:574
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JSON Web Token Claim Verification"
-msgstr ""
+msgstr "JSON Web Tokenによるクレーム検証"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:578
+#, fuzzy
 msgid "Please see link:security-openid-connect#jwt-claim-verification[JSON Web Token Claim verification] section about the claim verification, including the `iss` (issuer) claim.  It applies to ID tokens but also to access tokens in a JWT format if the `web-app` application has requested the access token verification."
-msgstr ""
+msgstr "`iss` （発行者）の主張を含む主張の検証については、 link:security-openid-connect#jwt-claim-verification[「JSON Web トークンの主張検証]」の項を参照してください。これはIDトークンに適用されますが、 `web-app` アプリケーションがアクセストークンの検証を要求した場合は、JWTフォーマットのアクセストークンにも適用されます。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:579
