--- a/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect.adoc.po
@@ -771,18 +771,21 @@ msgstr "設定例:"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:411
+#, fuzzy
 msgid "OIDC `service` application needs to know OpenId Connect provider's token, `JsonWebKey` (JWK) set and possibly `UserInfo` and introspection endpoint addresses."
-msgstr ""
+msgstr "OIDC `service` アプリケーションは、OpenId Connect プロバイダのトークン、 `JsonWebKey` (JWK) セット、そしておそらく `UserInfo` とイントロスペクションのエンドポイントアドレスを知る必要があります。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:413
+#, fuzzy
 msgid "By default they are discovered by adding a `/.well-known/openid-configuration` path to the configured `quarkus.oidc.auth-server-url`."
-msgstr ""
+msgstr "デフォルトでは、設定された `quarkus.oidc.auth-server-url` に `/.well-known/openid-configuration` パスを追加することで検出されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:415
+#, fuzzy
 msgid "Alternatively, if the discovery endpoint is not available or you would like to save on the discovery endpoint roundtrip, you can disable the discovery and configure them with relative path values, for example:"
-msgstr ""
+msgstr "また、ディスカバリーエンドポイントが利用できない場合や、ディスカバリーエンドポイントのラウンドトリップを節約したい場合は、ディスカバリーを無効にして、相対パスの値で設定することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:428
@@ -802,39 +805,45 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:431
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "JSON Web Token Claim Verification"
-msgstr ""
+msgstr "JSON Web Tokenによるクレーム検証"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:434
+#, fuzzy
 msgid "Once the bearer JWT token's signature has been verified and its `expires at` (`exp`) claim has been checked, the `iss` (`issuer`) claim value is verified next."
-msgstr ""
+msgstr "ベアラのJWTトークンの署名が検証され、 `expires at` ( `exp`) の主張が確認されると、次に `iss` ( `issuer`) の主張値が検証されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:437
+#, fuzzy
 msgid "By default, the `iss` claim value is compared to the `issuer` property which may have been discovered in the well-known provider configuration.  But if `quarkus.oidc.token.issuer` property is set then the `iss` claim value is compared to it instead."
-msgstr ""
+msgstr "デフォルトでは、 `iss` 請求値は、well-knownプロバイダの設定で発見された `issuer` プロパティと比較されます。しかし、 `quarkus.oidc.token.issuer` プロパティが設定されている場合は、代わりに `iss` 請求値がそれと比較されます。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:439
+#, fuzzy
 msgid "In some cases, this `iss` claim verification may not work. For example, if the discovered `issuer` property contains an internal HTTP/IP address while the token `iss` claim value contains an external HTTP/IP address. Or when a discovered `issuer` property contains the template tenant variable but the token `iss` claim value has the complete tenant-specific issuer value."
-msgstr ""
+msgstr "場合によっては、この `iss` の主張の検証がうまくいかないことがあります。例えば、発見された `issuer` プロパティに内部の HTTP/IP アドレスが含まれている一方で、トークン `iss` の主張値に外部の HTTP/IP アドレスが含まれている場合です。あるいは、発見された `issuer` プロパティにテンプレートのテナント変数が含まれているが、トークン `iss` の請求値には完全なテナント固有の発行者の値が含まれている場合。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:441
+#, fuzzy
 msgid "In such cases you may want to consider skipping the issuer verification by setting `quarkus.oidc.token.issuer=any`. Please note that it is not recommended and should be avoided unless no other options are available:"
-msgstr ""
+msgstr "このような場合には、 `quarkus.oidc.token.issuer=any` を設定して、発行者認証を省略することを検討してください。なお、この設定は推奨されておらず、他に選択肢がない場合を除き、避けるべきです。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:443
+#, fuzzy
 msgid "If you work with Keycloak and observe the issuer verification errors due to the different host addresses then configure Keycloak with a `KEYCLOAK_FRONTEND_URL` property to ensure the same host address is used."
-msgstr ""
+msgstr "Keycloakを使用していて、ホストアドレスが異なるために発行者検証エラーが発生する場合は、Keycloakに `KEYCLOAK_FRONTEND_URL` プロパティを設定して、同じホストアドレスが使用されるようにしてください。"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:444
+#, fuzzy
 msgid "If the `iss` property is tenant specific in a multi-tenant deployment then you can use the `SecurityIdentity` `tenant-id` attribute to check the issuer is correct in the endpoint itself or the custom JAX-RS filter, for example:"
-msgstr ""
+msgstr "マルチテナント展開で `iss` プロパティがテナント固有のものである場合は、 `SecurityIdentity` `tenant-id` 属性を使用して、エンドポイント自体やカスタム JAX-RS フィルタなどで発行者が正しいかどうかを確認することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/security-openid-connect.adoc:451
@@ -888,8 +897,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect.adoc:474
+#, fuzzy
 msgid "Note it is also recommended to use `quarkus.oidc.token.audience` property to verify the token `aud` (`audience`) claim value."
-msgstr ""
+msgstr "なお、トークン `aud` ( `audience`) の主張値を確認するために `quarkus.oidc.token.audience` プロパティを使用することも推奨します。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect.adoc:475
