--- a/l10n/po/ja_JP/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.2.Final released - Oracle JDBC driver extension, bugfixes'\n"
@@ -34,21 +34,31 @@ msgid ""
 "author: gsmet\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: 'Quarkus 1.13.2.Finalリリース - Oracle JDBCドライバの拡張、バグフィックス'\n"
+"date: 2021-04-14\n"
+"tags: release\n"
+"synopsis: 1.13.2.Finalでは、Oracle JDBCドライバ用の拡張機能を導入し、バグを修正しました。\n"
+"author: gsmet\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:11
+#, fuzzy
 msgid "We just released 1.13.2.Final, a new maintenance release for the 1.13 release train."
-msgstr ""
+msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.2.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:13
+#, fuzzy
 msgid "As usual, this release fixes bugs and includes some documentation improvements but it also introduces a new extension for the Oracle JDBC driver."
-msgstr ""
+msgstr "今回のリリースでは、通常通り、バグの修正とドキュメントの改善が行われていますが、それに加えて、Oracle JDBCドライバ用の新しい拡張機能が導入されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:15
+#, fuzzy
 msgid "1.13.2.Final is a safe upgrade for everyone using Quarkus 1.13."
-msgstr ""
+msgstr "1.13.2.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:17
@@ -63,24 +73,27 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:20
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Oracle JDBC driver extension"
-msgstr ""
+msgstr "Oracle JDBCドライバ拡張"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:23
+#, fuzzy
 msgid "While 1.13.2.Final is a maintenance release, we had some users asking for a backport of the brand new Oracle JDBC driver extension."
-msgstr ""
+msgstr "1.13.2.Finalはメンテナンスリリースですが、新しいOracle JDBCドライバ拡張機能のバックポートを求める声がありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:25
+#, fuzzy
 msgid "Given this work is self contained, it was judged safe enough to be included in this release."
-msgstr ""
+msgstr "この作品は自己完結型であるため、今回のリリースに収録するには十分な安全性があると判断しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:27
+#, fuzzy
 msgid "To use the Oracle Database with Quarkus, in JVM mode and native mode, you can now include the following snippet in your `pom.xml`:"
-msgstr ""
+msgstr "Oracle DatabaseをJVMモードおよびネイティブモードでQuarkusと一緒に使用するには、次のスニペットを `pom.xml` に含めることができるようになりました。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:34
@@ -94,8 +107,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:37
+#, fuzzy
 msgid "and use our standard datasource configuration infrastructure."
-msgstr ""
+msgstr "で、標準的なデータソース構成基盤を使用しています。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:38
@@ -105,8 +119,9 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:41
+#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.2.Final[the full changelog of 1.13.2.Final on GitHub]."
-msgstr ""
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.2.Final[1.13.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:42
