--- a/l10n/stats/translation.csv
+++ b/l10n/stats/translation.csv
@@ -1,4 +1,5 @@
 Filename, Fuzzy Messages, Total Messages, Fuzzy Words, Total Words, Achievement
+l10n/po/ja_JP/_posts/2021-04-15-gui-react-patternfly.adoc.po, 0, 75, 0, 1270 ,100%
 l10n/po/ja_JP/_posts/2021-04-07-quarkus-1-13-1-final-released.adoc.po, 0, 19, 0, 266 ,100%
 l10n/po/ja_JP/_posts/2021-03-15-micrometer-prometheus-openshift.adoc.po, 0, 57, 0, 858 ,100%
 l10n/po/ja_JP/_posts/2021-03-11-quarkus-1-12-2-final-released.adoc.po, 0, 19, 0, 192 ,100%
