Add machine translation

--- a/l10n/po/ja_JP/_posts/2021-04-15-gui-react-patternfly.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-15-gui-react-patternfly.adoc.po
@@ -18,13 +18,13 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:1
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "---\n"
-msgstr ""
+msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:8
-#, no-wrap
+#, fuzzy, no-wrap
 msgid ""
 "layout: post\n"
 "title: Adding Eyecandy to your Quarkus App with React and Patternfly \n"
@@ -34,11 +34,19 @@ msgid ""
 "author: dbrintzi\n"
 "---\n"
 msgstr ""
+"layout: post\n"
+"title: ReactとPatternflyでQuarkusアプリにEyecandyを追加する\n"
+"date: 2021-04-15\n"
+"tags: web gui react patternfly\n"
+"synopsis: ReactとPatternflyのGUIフレームワークを、開発や生産のためにプロジェクトに簡単に統合する方法をご紹介します。\n"
+"author: dbrintzi\n"
+"---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:11
+#, fuzzy
 msgid "A common pattern for containerized and distributed Quarkus applications is to serve as an efficient and scalable backend for a separate frontend application.  In the Kubernetes world a frontend application could be a pure web layer pod such as React, Angular or Vue.js, delegating all REST calls to these Quarkus service layer pods."
-msgstr ""
+msgstr "コンテナ化された分散型のQuarkusアプリケーションに共通するパターンは、別のフロントエンドアプリケーションのための効率的でスケーラブルなバックエンドとして機能することです。Kubernetesの世界では、フロントエンドアプリケーションはReact、Angular、Vue.jsなどの純粋なウェブレイヤーポッドであり、すべてのRESTコールをQuarkusのサービスレイヤーポッドに委ねることができます。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:13
@@ -48,40 +56,45 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:16
+#, fuzzy
 msgid "While this approach has the benefit of independent container scaling as well as an independent lifecycle it may sometimes be over engineered for small applications."
-msgstr ""
+msgstr "このアプローチには、独立したコンテナのスケーリングと独立したライフサイクルという利点がありますが、小規模なアプリケーションには過剰なエンジニアリングとなる場合があります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:18
+#, fuzzy
 msgid "Perhaps you just want to create a small self-contained CRUD application without compromising in modern web GUI technologies? We have seen how to achieve this with https://quarkus.io/blog/quarkus-and-web-ui-development-mode/[Angular] but what about React which at least according to GitHub stars has surpassed Angular in terms of popularity? It is all about choice and I will show you how you can not only integrate React but also use a web component framework called https://www.patternfly.org/[Patternfly].  Patternfly is a collection of patterns, components and styles for creating rich, consistent and interactive GUIs."
-msgstr ""
+msgstr "最新のWeb GUI技術に妥協することなく、自己完結型の小さなCRUDアプリケーションを作りたいと思っているのではないでしょうか？ link:https://quarkus.io/blog/quarkus-and-web-ui-development-mode/[Angular]でこれを実現する方法を見てきましたが、少なくともGitHubの星の数によれば、人気の点でAngularを上回っているReactはどうでしょうか？今回は、Reactを統合するだけでなく、 link:https://www.patternfly.org/[Patternfly]と呼ばれるWebコンポーネントフレームワークを使用する方法を紹介します。Patternflyは、リッチで一貫性のあるインタラクティブなGUIを作成するためのパターン、コンポーネント、スタイルを集めたものです。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:20
+#, fuzzy
 msgid "Let's create a Quarkus App with a REST endpoint that serves atomic particle objects to be displayed in a React/Patternfly table.  The sourcecode for the final application can be found https://github.com/nexus-Six/quarkus-gui-react-patternfly[here]."
-msgstr ""
+msgstr "React/Patternflyのテーブルに表示される原子粒子オブジェクトを提供するRESTエンドポイントを持つQuarkus Appを作成してみましょう。最終的なアプリケーションのソースコードは link:https://github.com/nexus-Six/quarkus-gui-react-patternfly[こちら]にあります。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:21
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 1 - Generate the Quarkus Project"
-msgstr ""
+msgstr "ステップ1 - Quarkusプロジェクトの生成"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:24
+#, fuzzy
 msgid "To generate a starter project go to https://code.quarkus.io. Enter 'io.quarkus' as Maven Group and 'quarkus-react' as Artifact.  In the list of extensions choose *RESTEasy JAX-RS* and *RESTEasy JSON-B*. Then generate and download the project, unzip it on your local machine and open the project folder in your favorite IDE."
-msgstr ""
+msgstr "スタータープロジェクトを生成するには、 https://code.quarkus.io  にアクセスします。Maven Groupとして「io.quarkus」、Artifactとして「quarkus-react」を入力します。拡張機能のリストで、 *「RESTEasy JAX-RS*」と *「RESTEasy JSON-B*」を選択します。その後、プロジェクトを生成してダウンロードし、ローカル・マシンで解凍して、お気に入りのIDEでプロジェクト・フォルダを開きます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:25
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 2 - Add the Quarkus REST Endpoint"
-msgstr ""
+msgstr "ステップ2 - Quarkus RESTエンドポイントの追加"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:28
+#, fuzzy
 msgid "In the Java package folder /src/main/java/io/quarkus where the sample *GreetingResource.java* resides, create a new bean class called *Particle.java* with the following content:"
-msgstr ""
+msgstr "サンプルの *GreetingResource.java*が存在するJavaパッケージフォルダ/src/main/java/io/quarkusに、 *Particle.java*という名前の新しいBeanクラスを以下の内容で作成します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:32
@@ -130,8 +143,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:51
+#, fuzzy
 msgid "Now create a new REST resource class called *ParticleResource.java* where we return some test particles (neglecting any atomic physics implications here)."
-msgstr ""
+msgstr "ここで、 *ParticleResource.java*という新しいRESTリソースクラスを作成し、いくつかのテスト粒子を返します（ここでは原子物理学的な意味合いは無視します）。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:59
@@ -195,8 +209,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:84
+#, fuzzy
 msgid "Test if everything works by starting up Quarkus in dev mode:"
-msgstr ""
+msgstr "開発モードでQuarkusを起動して、すべてが動作するかどうかをテストします。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:88
@@ -206,8 +221,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:91
+#, fuzzy
 msgid "In a new terminal call the endpoint to see your particle response:"
-msgstr ""
+msgstr "新しい端末で、エンドポイントに電話をかけて、パーティクルの反応を確認します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:95
@@ -223,24 +239,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:100
+#, fuzzy
 msgid "Our Quarkus data layer is now ready, so let's create the React GUI next."
-msgstr ""
+msgstr "Quarkusのデータレイヤーの準備ができたので、次はReactのGUIを作りましょう。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:101
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 3 - Generate the React Project"
-msgstr ""
+msgstr "ステップ3 - Reactプロジェクトの生成"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:104
+#, fuzzy
 msgid "Make sure you have installed *Node.js* and *npm* on your system.  Refer to the https://nodejs.org/en/download/[official documentation] for more information if required."
-msgstr ""
+msgstr "お使いのシステムに *Node.js*と *npm*がインストールされていることを確認してください。必要に応じて、 link:https://nodejs.org/en/download/[公式ドキュメント]を参照してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:106
+#, fuzzy
 msgid "Create a new folder in your project /src/main/*webapp* which will be the base folder for your React project. Now open another terminal in this folder, run the React project initializer and then add the Patternfly node module:"
-msgstr ""
+msgstr "プロジェクト内に新しいフォルダ/src/main/ *webapp*を作成し、これをReactプロジェクトのベースフォルダとします。このフォルダで別のターミナルを開き、Reactプロジェクトイニシャライザを実行して、Patternflyノードモジュールを追加します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:111
@@ -252,13 +271,15 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:114
+#, fuzzy
 msgid "When starting the React app it will run on port 3000 by default. When we then try to access our Quarkus endpoint on port 8080 the browser will prevent this due to https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS[CORS security policies].  In production this will not matter as the compiled static React app will be served from Quarkus over port 8080 as well but during development this is an issue."
-msgstr ""
+msgstr "Reactアプリを起動すると、デフォルトではポート3000で実行されます。その後、ポート8080でQuarkusのエンドポイントにアクセスしようとすると、 link:https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS[CORSセキュリティポリシー]のためにブラウザがこれを阻止します。本番環境では、コンパイルされた静的なReactアプリがポート8080でQuarkusから提供されるため、これは問題になりませんが、開発中はこれが問題になります。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:116
+#, fuzzy
 msgid "Fortunately React has a neat little feature called *proxy* which forwards all requests for unknown endpoints to another URL. In the */webapp* folder open the file *package.json* and add the proxy line forwarding everything to our Quarkus port on 8080:"
-msgstr ""
+msgstr "幸いなことに、Reactには未知のエンドポイントへのすべてのリクエストを別のURLに転送する *proxy*というちょっとした機能があります。 *webapp*フォルダで *package.json*ファイルを開き、proxyの行を追加して、すべてのリクエストをQuarkusのポート8080に転送します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:158
@@ -307,14 +328,15 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:161
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 4 - Create a Patternfly Table Component to Populate with our Data"
-msgstr ""
+msgstr "ステップ4 - Patternflyのテーブルコンポーネントを作成して、データを入力します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:164
+#, fuzzy
 msgid "Import the Patternfly CSS in the React project in */webapp/index.js*"
-msgstr ""
+msgstr "Reactプロジェクトの */webapp/index.*jsにPatternflyのCSSをインポートします。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:172
@@ -329,8 +351,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:175
+#, fuzzy
 msgid "In /webapp/src create a new folder called *components*, inside create a file called *particles.js* and generate a Patternfly table by looping over a list of particle objects:"
-msgstr ""
+msgstr "webapp/srcに *components*という新しいフォルダを作り、その中に *p particles.js*というファイルを作り、パーティクルオブジェクトのリストをループさせてPatternflyのテーブルを生成します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:179
@@ -380,8 +403,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:208
+#, fuzzy
 msgid "Next adjust */webapp/src/App.js* to call our Quarkus service endpoint and render our particle component with the response data:"
-msgstr ""
+msgstr "次に、 */webapp/src/App.js*を調整して、Quarkusサービスのエンドポイントを呼び出し、レスポンスデータを使ってパーティクルコンポーネントをレンダリングします。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:213
@@ -435,18 +459,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:239
+#, fuzzy
 msgid "We are now ready to test our GUI in React development mode."
-msgstr ""
+msgstr "これで、Reactの開発モードでGUIをテストする準備が整いました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:241
+#, fuzzy
 msgid "Make sure Quarkus is still running in another terminal."
-msgstr ""
+msgstr "別のターミナルでQuarkusがまだ起動していることを確認します。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:243
+#, fuzzy
 msgid "In the */webapp* folder execute :"
-msgstr ""
+msgstr "*webapp」*フォルダ内で「.NET」を実行します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:247
@@ -456,8 +483,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:250
+#, fuzzy
 msgid "A browser will open to http://localhost:3000.  If not navigate to that URL.  You should see our table dynamically populated from your Quarkus particle backend.  In the developer tools of your browser you will see that the data is actually retrieved from http://localhost:3000/particles"
-msgstr ""
+msgstr "http://localhost:3000  のブラウザが開きます。開かない場合は、そのURLに移動してください。Quarkusのパーティクルバックエンドからテーブルが動的に入力されているのがわかると思います。ブラウザの開発者ツールでは、データが実際に http://localhost:3000/particles から取得されていることがわかります。"
 
 #. type: Target for macro image
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:251
@@ -467,24 +495,27 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:254
+#, fuzzy
 msgid "We are running in a double developer mode now. Any changes made to either your Java or Javascript code will be applied immediately.  Isn't that developer bliss?"
-msgstr ""
+msgstr "現在、ダブルデベロッパーモードで運用しています。JavaとJavascriptのどちらかのコードに加えられた変更は、すぐに適用されます。これは開発者にとって至福の時ではないでしょうか。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:256
+#, fuzzy
 msgid "But what about containerized deployment you ask? Well, once your shiny new GUI app is ready for primetime there are some last adjustments that we need to build runnable jars and images."
-msgstr ""
+msgstr "しかし、コンテナを使ったデプロイについてはどうでしょうか？新しいGUIアプリが完成したら、実行可能なジャーやイメージを作成するために、いくつかの調整が必要になります。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:257
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Step 5 - Prepare our Project for Production Build"
-msgstr ""
+msgstr "ステップ5 - プロジェクトの本番ビルドへの準備"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:260
+#, fuzzy
 msgid "In */webapp/package.json* add a prod build phase:"
-msgstr ""
+msgstr "*webapp/package.json*にprodのビルドフェーズを追加します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:269
@@ -500,18 +531,21 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:271
+#, fuzzy
 msgid "This will do a production build of the static React assets and copy them over into the default Quarkus directory for static files."
-msgstr ""
+msgstr "これにより、静的なReactアセットのプロダクションビルドが行われ、Quarkusのデフォルトの静的ファイル用ディレクトリにコピーされます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:273
+#, fuzzy
 msgid "The rsync command is specific for Linux.  For other operating systems please substitute with an equivalent command."
-msgstr ""
+msgstr "rsyncコマンドは、Linux専用です。他のOSの場合は、同等のコマンドで代用してください。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:275
+#, fuzzy
 msgid "For the last step we will add the excellent https://github.com/eirslett/frontend-maven-plugin[frontend-maven-plugin] to our pom.xml that will trigger these React build phases from a normal maven build. Adjust the npm and node versions to match your locally installed ones. The maven install phase would actually install these two packages which can be handy for a CI/CD build or when starting with this project."
-msgstr ""
+msgstr "最後のステップでは、優れた link:https://github.com/eirslett/frontend-maven-plugin[frontend-maven-plugin]を pom.xml に追加して、通常の maven ビルドから React のビルドフェーズを起動します。npmとnodeのバージョンを、ローカルにインストールされているものに合わせて調整します。mavenのインストールフェーズでは、実際にこれらの2つのパッケージがインストールされますが、これはCI/CDビルドやこのプロジェクトの開始時に便利です。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:320
@@ -563,8 +597,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:323
+#, fuzzy
 msgid "Now let's build our runnable jar:"
-msgstr ""
+msgstr "それでは、実行可能なjarをビルドしてみましょう。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:326
@@ -574,8 +609,9 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:328
+#, fuzzy
 msgid "Stop all other running environments to free up the ports and run:"
-msgstr ""
+msgstr "他の稼働中の環境をすべて停止してポートを空け、実行します。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:332
@@ -585,22 +621,24 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:335
+#, fuzzy
 msgid "Open your browser to http://localhost:8080 to see you table again, now running from a single optimized Quarkus jar."
-msgstr ""
+msgstr "ブラウザで http://localhost:8080 を開くと、最適化された単一のQuarkus jarから実行されているテーブルが表示されます。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:336
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "Take Away"
-msgstr ""
+msgstr "テイクアウェイ"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:339
+#, fuzzy
 msgid "There you go. With just a few easy steps you can use the power of React and Patternfly to add slick looking interactive GUIs to your Quarkus apps."
-msgstr ""
+msgstr "そうですね。いくつかの簡単なステップで、ReactとPatternflyの力を使って、Quarkusアプリに洗練された見た目のインタラクティブなGUIを追加することができます。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-15-gui-react-patternfly.adoc:341
-#, no-wrap
+#, fuzzy, no-wrap
 msgid "How about compiling this app to https://quarkus.io/guides/building-native-image[native] next to deploy an extremely lightweight webapp? Or you may want to look at some of other https://www.patternfly.org/v4/get-started/develop/[Patternfly components] to create a more sophisticated web interface. Either way there no boundaries except for your creativity to make you Quarkus apps shine.       \n"
-msgstr ""
+msgstr "このアプリを次は link:https://quarkus.io/guides/building-native-image[ネイティブ]にコンパイルして、極めて軽量なWebアプリを展開するのはどうでしょうか。あるいは、他の link:https://www.patternfly.org/v4/get-started/develop/[Patternflyコンポーネント]を使用して、より洗練されたウェブインターフェイスを作成することもできます。いずれにしても、Quarkusアプリを輝かせるためには、あなたの創造性以外に境界はありません。"
