Translate 2021-04-14-quarkus-1-13-2-final-released.adoc.po

--- a/l10n/po/ja_JP/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc.po
@@ -3,28 +3,28 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-04-14 18:15+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-04-15 10:01+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:1
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "---\n"
 msgstr "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:8
-#, fuzzy, no-wrap
+#, no-wrap
 msgid ""
 "layout: post\n"
 "title: 'Quarkus 1.13.2.Final released - Oracle JDBC driver extension, bugfixes'\n"
@@ -35,28 +35,25 @@ msgid ""
 "---\n"
 msgstr ""
 "layout: post\n"
-"title: 'Quarkus 1.13.2.Finalリリース - Oracle JDBCドライバの拡張、バグフィックス'\n"
+"title: 'Quarkus 1.13.2.Finalリリース - Oracle JDBCドライバエクステンション、バグフィックス'\n"
 "date: 2021-04-14\n"
 "tags: release\n"
-"synopsis: 1.13.2.Finalでは、Oracle JDBCドライバ用の拡張機能を導入し、バグを修正しました。\n"
+"synopsis: 1.13.2.Finalでは、Oracle JDBCドライバエクステンションを導入し、バグを修正しました。\n"
 "author: gsmet\n"
 "---\n"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:11
-#, fuzzy
 msgid "We just released 1.13.2.Final, a new maintenance release for the 1.13 release train."
 msgstr "1.13リリーストレインの新しいメンテナンスリリースである1.13.2.Finalをリリースしました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:13
-#, fuzzy
 msgid "As usual, this release fixes bugs and includes some documentation improvements but it also introduces a new extension for the Oracle JDBC driver."
-msgstr "今回のリリースでは、通常通り、バグの修正とドキュメントの改善が行われていますが、それに加えて、Oracle JDBCドライバ用の新しい拡張機能が導入されています。"
+msgstr "今回のリリースでは、通常通り、バグの修正とドキュメントの改善が行われていますが、それに加えて、Oracle JDBCドライバ用の新しいエクステンションが導入されています。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:15
-#, fuzzy
 msgid "1.13.2.Final is a safe upgrade for everyone using Quarkus 1.13."
 msgstr "1.13.2.Finalは、Quarkus 1.13を使用しているすべての人にとって安全なアップグレードです。"
 
@@ -73,27 +70,24 @@ msgstr "変更点"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:20
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Oracle JDBC driver extension"
-msgstr "Oracle JDBCドライバ拡張"
+msgstr "Oracle JDBCドライバエクステンション"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:23
-#, fuzzy
 msgid "While 1.13.2.Final is a maintenance release, we had some users asking for a backport of the brand new Oracle JDBC driver extension."
-msgstr "1.13.2.Finalはメンテナンスリリースですが、新しいOracle JDBCドライバ拡張機能のバックポートを求める声がありました。"
+msgstr "1.13.2.Finalはメンテナンスリリースですが、新しいOracle JDBCドライバエクステンションのバックポートを求める声がありました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:25
-#, fuzzy
 msgid "Given this work is self contained, it was judged safe enough to be included in this release."
-msgstr "この作品は自己完結型であるため、今回のリリースに収録するには十分な安全性があると判断しました。"
+msgstr "これは自己完結型であるため、今回のリリースに収録するには十分な安全性があると判断しました。"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:27
-#, fuzzy
 msgid "To use the Oracle Database with Quarkus, in JVM mode and native mode, you can now include the following snippet in your `pom.xml`:"
-msgstr "Oracle DatabaseをJVMモードおよびネイティブモードでQuarkusと一緒に使用するには、次のスニペットを `pom.xml` に含めることができるようになりました。"
+msgstr "Oracle DatabaseをJVMモードおよびネイティブモードでQuarkusと一緒に使用するには、次のスニペットを `pom.xml` に含めることで可能です。"
 
 #. type: delimited block -
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:34
@@ -107,9 +101,8 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:37
-#, fuzzy
 msgid "and use our standard datasource configuration infrastructure."
-msgstr "で、標準的なデータソース構成基盤を使用しています。"
+msgstr "これで、標準的なデータソース設定基盤を使用できます。"
 
 #. type: Title ===
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:38
@@ -119,9 +112,8 @@ msgstr "完全な変更履歴"
 
 #. type: Plain text
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:41
-#, fuzzy
 msgid "You can get https://github.com/quarkusio/quarkus/releases/tag/1.13.2.Final[the full changelog of 1.13.2.Final on GitHub]."
-msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.2.Final[1.13.2.Finalの完全な変更履歴はGitHubに]掲載されています。"
+msgstr "link:https://github.com/quarkusio/quarkus/releases/tag/1.13.2.Final[1.13.2.Finalの完全な変更履歴はGitHub] に掲載されています。"
 
 #. type: Title ==
 #: upstream/_posts/2021-04-14-quarkus-1-13-2-final-released.adoc:42
